--- a/src/client/app/avdelingsleder/statusfordeling/StatusFordeling.css
+++ b/src/client/app/avdelingsleder/statusfordeling/StatusFordeling.css
@@ -14,8 +14,8 @@
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08), 0 1px 2px rgba(0, 0, 0, 0.04);
     color: #262626;
     transition: box-shadow 0.2s ease;
-    width: 192px;
-    padding: 10px;
+    width: 214px;
+    padding: 11px;
 }
 
 .ramme:hover {
@@ -58,26 +58,19 @@
     margin: 0;
 }
 
-.nedbrytningElement>svg {
-    margin-right: 2px;
-}
-
 .tallcontainer {
     flex-grow: 1;
 }
 
 .forklaring {
-    flex-grow: 0;
-    justify-items: center;
-    justify-content: center;
     align-items: center;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 }
 
-.forklaring span {
+.forklaringTekst {
     font-size: 15px;
     font-weight: 600;
-    text-align: center;
     color: #495057;
+    margin-right: 4px;
 }
