--- a/src/client/app/avdelingsleder/statusfordeling/StatusFordeling.css
+++ b/src/client/app/avdelingsleder/statusfordeling/StatusFordeling.css
@@ -35,8 +35,7 @@
     margin-top: 10px;
     margin-bottom: 10px;
     color: #495057;
-    font-size: 26px;
-    font-weight: 500;
+    font-size: 22px;
     display: flex;
     justify-content: center;
 }
@@ -56,6 +55,10 @@
     font-weight: 500;
     white-space: nowrap;
     margin: 0;
+}
+
+.bunntall {
+    font-weight: 700;
 }
 
 .tallcontainer {
