--- a/src/client/app/sharedComponents/searchWithDropdown/searchWithDropdown.css
+++ b/src/client/app/sharedComponents/searchWithDropdown/searchWithDropdown.css
@@ -9,7 +9,7 @@
 	padding-right: 3rem;
 }
 .suggestionPopover[data-reach-combobox-popover] {
-	min-width: 16.875rem;
+	min-width: 21rem;
 	background-color: white;
 	border-radius: var(--a-border-radius-medium);
 	box-shadow: var(--a-shadow-medium);
@@ -17,9 +17,6 @@
 	transform: translateY(4px);
 	z-index: var(--a-z-index-tooltip);
 	position: absolute;
-	width: max-content;
-	max-width: 35rem;
-	overflow-x: hidden;
 	:global .navds-checkbox__label {
 		padding: 12px 0;
 	}
@@ -68,13 +65,11 @@
 }
 .suggestionCheckbox :global(.navds-checkbox__label) {
 	padding: 0.5rem 0 !important;
-	word-break: break-word;
-	white-space: normal !important;
-	flex-wrap: wrap !important;
 }
 .suggestionCheckbox :global(.navds-checkbox__content) {
 	white-space: normal;
-	overflow-wrap: anywhere;
+	overflow-wrap: break-word;
+	word-break: break-word;
 	min-width: 0;
 }
 .suggestionCheckbox :global(.navds-checkbox__label-text) {
